# segmentation_infer_with_captured_image

./: .gitignore  colorize_int_label_mask.py  convert_onnx.py  convert_weight_data_from_dataparallel.py  generate_fused_image.py  infer.py  infer_with_camera.py  infer_with_camera_multi_class.py  infer_with_image.py  infer_with_image_multi_class.py  infer_with_image_onnxruntime_trt.py  infer_with_image_trt.py  pyproject.toml  requirements.txt  requirements_trt.txt  symbolic_shape_infer.py
cfg/: camera_parameter.toml  classes.json  semantic_segmentation.toml  semantic_segmentation_multi_class.toml
scripts/: camera_parameter.py  class_info_manager.py  inference_manager.py  rgb_manager.py  utils.py
