[tool.poetry]
name = "infer_with_captured_images"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "4.2.0.34"
click = "7.1.2"
numpy = "1.16.6"
toml = "0.10.1"
pathlib = "1.0.1"
tqdm = "4.48.2"
segmentation = "^0.2.1"
torch = "1.5.0"
torchvision = "0.6.0"
pytorch_lightning = "0.9.0"
segmentation_models_pytorch = "0.1.0"
pkgconfig = "1.5.1"
scipy = "1.2.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
